DeepCode/flask_app/flask.log
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\flask\__main__.py", line 3, in <module>
    main()
    ~~~~^^
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\flask\cli.py", line 1131, in main
    cli.main()
    ~~~~~~~~^^
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\click\core.py", line 1383, in main
    rv = self.invoke(ctx)
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\click\core.py", line 1850, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
                           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\click\core.py", line 1246, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\click\core.py", line 814, in invoke
    return callback(*args, **kwargs)
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\click\decorators.py", line 93, in new_func
    return ctx.invoke(f, obj, *args, **kwargs)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\click\core.py", line 814, in invoke
    return callback(*args, **kwargs)
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\flask\cli.py", line 979, in run_command
    raise e from None
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\flask\cli.py", line 963, in run_command
    app: WSGIApplication = info.load_app()  # pyright: ignore
                           ~~~~~~~~~~~~~^^
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\flask\cli.py", line 349, in load_app
    app = locate_app(import_name, name)
  File "D:\agenic_arhitecture\5\.venv\Lib\site-packages\flask\cli.py", line 245, in locate_app
    __import__(module_name)
    ~~~~~~~~~~^^^^^^^^^^^^^
  File "D:\agenic_arhitecture\5\flask_app\app.py", line 3, in <module>
    from gemini_client import generate_text
  File "D:\agenic_arhitecture\5\flask_app\gemini_client.py", line 1
    @'
     ^
SyntaxError: unterminated string literal (detected at line 1)
